--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,11 @@
       <div class="card">
         <span class="palo-alto"> </span>
         <span class="numero"></span>
-        <span class="palo-bajo">  </span>
+        <span class="palo-bajo"> </span>
       </div>
+      
     </div>
+    <button id="btn">Click me!</button>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
